<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:paddingLeft="10sp" android:paddingRight="10sp"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:paddingTop="2sp">
        
        <TextView
            android:id="@+id/tvCourse"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/prof"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="sans" >

</TextView>
        <LinearLayout android:id="@+id/LinearLayout02"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">

                <TextView
                    android:id="@+id/tvProf"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prof"
                    android:textSize="13sp"
                    android:textStyle="bold" >

</TextView>

                <TextView
                    android:id="@+id/tvProfName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blank"
                    android:textSize="13sp" >

</TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvGrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/blank"
                android:textSize="13sp" />

        </LinearLayout>

</LinearLayout>